--- a/prediction_launcher.desktop
+++ b/prediction_launcher.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Comment[en_GB]=
 Comment=
-Exec='/home/seanrh/Documents/Work/Personal code/Predict lifts/Predict_app/App/prediction_app.py'
+Exec='/usr/lib64/prediction_app/prediction_app.py'
 GenericName[en_GB]=
 GenericName=
-Icon=/home/seanrh/Documents/Work/Personal code/Predict lifts/Predict_app/App/squat.png
+Icon='/usr/lib64/prediction_app/squat.png'
 MimeType=
 Name=Powerlifting predictions
 Path=
